--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -46,35 +46,9 @@ jobs:
           name: tetris-macos
           path: tetris-macos
 
-  build-windows:
-    runs-on: windows-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - uses: msys2/setup-msys2@v2
-        with:
-          update: true
-          install: mingw-w64-x86_64-gcc mingw-w64-x86_64-ncurses
-
-      - name: Install Just
-        shell: msys2 {0}
-        run: curl --proto '=https' --tlsv1.2 -sSf https://just.systems/install.sh | bash -s -- --to /usr/local/bin
-
-      - name: Build with Just
-        shell: msys2 {0}
-        run: just install
-
-      - name: Rename executable
-        run: mv tetris.exe tetris-windows.exe
-
-      - uses: actions/upload-artifact@v3
-        with:
-          name: tetris-windows.exe
-          path: tetris-windows.exe
-
   release:
     runs-on: ubuntu-latest
-    needs: [build-linux, build-macos, build-windows]
+    needs: [build-linux, build-macos]
     steps:
       - name: Download artifacts
         uses: actions/download-artifact@v3
@@ -91,4 +65,3 @@ jobs:
           files: |
             tetris-linux
             tetris-macos
-            tetris-windows.exe
